update tinggal kurng hubungkan ke midtrrans
update tinggal kurng hubungkan ke midtrrans

--- a/.env
+++ b/.env
@@ -4,6 +4,15 @@ APP_KEY=base64:cgtYMbN/KEfhOUIxeD/Z2/orkT9GdOobF8ovXriAJtQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+
+MIDTRANS_IS_PRODUCTION=false
+MIDTRANS_MERCHANT_ID=G438804385
+MIDTRANS_CLIENT_KEY=SB-Mid-client-rC-kDhMoolvgTIV7
+MIDTRANS_SERVER_KEY=SB-Mid-server-bmECLoxqY0Y1KY9td2Zh92od
+MIDTRANS_IS_SANDBOX=true
+MIDTRANS_IS_3DS=false
+
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
